opam-version: "1.2"
maintainer: "Jeremy Yallop <yallop@gmail.com>"
authors: "Jeremy Yallop <yallop@gmail.com>"
homepage: "https://github.com/yallop/ocaml-pb"
bug-reports: "https://github.com/yallop/ocaml-pb/issues"
license: "MIT"
dev-repo: "https://github.com/yallop/ocaml-pb.git"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [["dune" "runtest" "-p" name "-j" jobs]]
depends: [
  "dune" {build & >= "1.0"}
  "ocamlbuild" {build}
  "ounit" {test}
  "hex" {test}
  "integers"
  "base-bytes"
  "result"
  "angstrom" {>= "0.10.0"}
  "faraday"
]
