opam-version: "2.0"
authors: "Jeremy Yallop <yallop@gmail.com>"
maintainer: "Jeremy Yallop <yallop@gmail.com>"
license: "MIT"
homepage: "https://github.com/yallop/ocaml-pb"
bug-reports: "https://github.com/yallop/ocaml-pb/issues"
dev-repo: "git+https://github.com/yallop/ocaml-pb.git"
depends: [
  "ocaml"
  "dune" {build & >= "1.0"}
  "ounit" {with-test}
  "integers"
  "base-bytes"
  "result"
  "angstrom" {>= "0.10.0"}
  "faraday"
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
synopsis: "Library for describing Protobuf messages"
